Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/execute_domino_job.ipynb
+++ b/execute_domino_job.ipynb
@@ -77,7 +77,8 @@
     "head_hw_tier_id = get_hw_tier_id(name=\"Medium\")['id']\n",
     "worker_hw_tier_id = get_hw_tier_id(name=\"Medium\")['id']\n",
     "\n",
-    "command=\"python -m ray_examples.xgboost --config-dir /mnt/code/conf env=dev\"\n",
+    "#command=\"python -m ray_examples.xgboost --config-dir /mnt/code/conf env=dev\"\n",
+    "command=\"/mnt/code/scripts/ray_xgboost.sh\"\n",
     "hardware_tier_name=\"Medium\"\n",
     "cluster_env_id = get_environment_id('SW-Domino 6.0 Ray Cluster Env')['id']\n",
     "compute_env_id = get_environment_id('SW-DSE6+Ray Env')['id']\n",
