Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/cluster_auto_scaler_client.ipynb
+++ b/cluster_auto_scaler_client.ipynb
@@ -2,107 +2,149 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bdbff7d0-937a-4ef6-97d7-ff412802591c",
+   "execution_count": null,
+   "id": "36746bee-b49a-4c52-a901-5f027fe2264c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import os\n",
-    "\n",
-    "\n",
-    "base_url_of_cluster_scaler = \"http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local\"\n",
-    "service_name=\"ddl_cluster_scaler\"\n",
-    "\n",
-    "def is_cluster_auto_scaler_healthy():\n",
-    "    # Is service running\n",
-    "    healthz_url = f\"{base_url_of_cluster_scaler}/healthz\"\n",
-    "    result = requests.get(healthz_url)\n",
-    "    return result.status_code, result.text"
+    "from utils import cluster_scaler_client\n",
+    "cluster_scaler_client.scale_cluster(cluster_kind=\"rayclusters\",replicas=4)\n",
+    "cluster_scaler_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7ea4d674-2018-4c60-ac08-12cbef86ff20",
+   "execution_count": 3,
+   "id": "85a17fed-2aae-4939-85f8-0b7d44cf77c4",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/scale/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Scaling not yet done...\n",
+      "ray-68b5e1f3b7910b03aaf26bb0\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "Status code 200\n",
+      "Expected worker nodes 1\n",
+      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(200, '{\"status\":\"healthy\"}\\n')"
+       "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_cluster_auto_scaler_healthy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8d613409-537c-4e56-9c20-b31e25d5b14e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_auth_headers():\n",
-    "    domino_api_proxy= os.environ['DOMINO_API_PROXY']\n",
-    "    #This is a proxy for the service account tokem\n",
-    "    token = requests.get(f\"{domino_api_proxy}/access-token\").text\n",
-    "    headers = {\n",
-    "        \"Authorization\": f\"Bearer {token}\",\n",
-    "        \"Content-Type\": \"application/json\"   # add this if you're posting JSON\n",
-    "    }\n",
-    "    return headers "
+    "from utils import cluster_scaler_client\n",
+    "cluster_scaler_client.scale_cluster(cluster_kind=\"rayclusters\",replicas=1)\n",
+    "cluster_scaler_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eed158d-5c6f-4368-8dfc-abeb349884ee",
+   "id": "ac1a8bb4-2fef-4058-a1e8-b00c77f65fa2",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_cluster_status(cluster_kind:str=\"rayclusters\"):  \n",
-    "    cluster_id_prefix = cluster_kind.replace(\"clusters\",\"\")\n",
-    "    cluster_id = f\"{cluster_id_prefix}-{os.environ['DOMINO_RUN_ID']}\"\n",
-    "    print(cluster_id)\n",
-    "    get_cluster_url = f\"{base_url_of_cluster_scaler}/{service_name}/get/{cluster_kind}/{cluster_id}\"\n",
-    "    print(get_cluster_url)\n",
-    "    resp = requests.get(get_cluster_url,headers=get_auth_headers())\n",
-    "    print(f\"Status code {resp.status_code}\")\n",
-    "    cluster_details = resp.json()\n",
-    "    return cluster_details\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d15d13a9-0bda-4944-b10b-f334d984184d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def scale_cluster(cluster_kind:str=\"rayclusters\",replicas:int=1):\n",
-    "    cluster_id_prefix = cluster_kind.replace(\"clusters\",\"\")\n",
-    "    cluster_id = f\"{cluster_id_prefix}-{os.environ['DOMINO_RUN_ID']}\"\n",
-    "    scale_cluster_url = f\"{base_url_of_cluster_scaler}/{service_name}/scale/{cluster_kind}/{cluster_id}\"\n",
-    "    print(scale_cluster_url)\n",
-    "    \n",
-    "    resp = requests.post(\n",
-    "        scale_cluster_url,\n",
-    "        headers=get_auth_headers(),\n",
-    "        json={\"replicas\": replicas},\n",
-    "        timeout=(3.05, 10),\n",
-    "    )\n",
-    "    print(f\"Status code {resp.status_code}\")\n",
-    "    cluster_details = resp.json()\n",
-    "    return cluster_details"
-   ]
+   "source": []
   }
  ],
  "metadata": {
