--- a/cluster_auto_scaler_client.ipynb
+++ b/cluster_auto_scaler_client.ipynb
@@ -3,122 +3,140 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36746bee-b49a-4c52-a901-5f027fe2264c",
+   "id": "b50fcc65-7e3d-458f-a01c-0135b21ac2cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import cluster_scaler_client\n",
-    "cluster_scaler_client.scale_cluster(cluster_kind=\"rayclusters\",replicas=4)\n",
-    "cluster_scaler_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
+    "from utils import ddl_cluster_scaling_client\n",
+    "import json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "de242485-c265-4d63-afbe-79fba181ebfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = ddl_cluster_scaling_client.get_auth_headers()\n",
+    "print(result['Authorization'][0:20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "626dc69d-bf2c-40bf-bf80-0ce17a5ab6dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = ddl_cluster_scaling_client.get_cluster_status()['status']\n",
+    "print('Cluster status')\n",
+    "print(json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False))\n",
+    "j = ddl_cluster_scaling_client.get_cluster_status()['spec']['autoscaling']\n",
+    "print('Cluster Autoscaling status')\n",
+    "print(json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False))\n",
+    "j = ddl_cluster_scaling_client.get_cluster_status()['spec']['worker']['replicas']\n",
+    "print('Cluster worker replicas')\n",
+    "print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36746bee-b49a-4c52-a901-5f027fe2264c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=\"rayclusters\",worker_hw_tier_name=\"Medium\", replicas=3)\n",
+    "json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False)\n",
+    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7f603bb-312a-4063-a2c7-899b79a1d3ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "j = ddl_cluster_scaling_client.restart_head_node(cluster_kind=\"rayclusters\")\n",
+    "restarts_at = j['started_at']\n",
+    "print(restarts_at)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "85a17fed-2aae-4939-85f8-0b7d44cf77c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddl_cluster_scaling_client.restart_head_node_status(cluster_kind=\"rayclusters\",restarted_since=restarts_at)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac1a8bb4-2fef-4058-a1e8-b00c77f65fa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ddl_cluster_scaling_client.wait_until_node_restarted(cluster_kind=\"rayclusters\",restarted_since=restarts_at)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "549cd30e-7397-4d74-aa4a-d9e10cd26425",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/scale/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "1\n",
       "Status code 200\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "ray-68b8412c49d5771beb6aab8d\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/cluster/rayclusters/ray-68b8412c49d5771beb6aab8d\n",
       "Status code 200\n",
+      "Actual worker nodes 2\n",
       "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Current worker nodes ['ray-68b8412c49d5771beb6aab8d-ray-worker-0', 'ray-68b8412c49d5771beb6aab8d-ray-worker-1']\n",
       "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "ray-68b8412c49d5771beb6aab8d\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/cluster/rayclusters/ray-68b8412c49d5771beb6aab8d\n",
       "Status code 200\n",
+      "Actual worker nodes 2\n",
       "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Current worker nodes ['ray-68b8412c49d5771beb6aab8d-ray-worker-0', 'ray-68b8412c49d5771beb6aab8d-ray-worker-1']\n",
       "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "ray-68b8412c49d5771beb6aab8d\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/cluster/rayclusters/ray-68b8412c49d5771beb6aab8d\n",
       "Status code 200\n",
+      "Actual worker nodes 2\n",
       "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Current worker nodes ['ray-68b8412c49d5771beb6aab8d-ray-worker-0', 'ray-68b8412c49d5771beb6aab8d-ray-worker-1']\n",
       "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "ray-68b8412c49d5771beb6aab8d\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/cluster/rayclusters/ray-68b8412c49d5771beb6aab8d\n",
       "Status code 200\n",
+      "Actual worker nodes 2\n",
       "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Current worker nodes ['ray-68b8412c49d5771beb6aab8d-ray-worker-0', 'ray-68b8412c49d5771beb6aab8d-ray-worker-1']\n",
       "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "ray-68b8412c49d5771beb6aab8d\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/cluster/rayclusters/ray-68b8412c49d5771beb6aab8d\n",
       "Status code 200\n",
+      "Actual worker nodes 2\n",
       "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
+      "Current worker nodes ['ray-68b8412c49d5771beb6aab8d-ray-worker-0', 'ray-68b8412c49d5771beb6aab8d-ray-worker-1']\n",
       "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
+      "ray-68b8412c49d5771beb6aab8d\n",
+      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/cluster/rayclusters/ray-68b8412c49d5771beb6aab8d\n",
       "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-1', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-2', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0', 'ray-68b5e1f3b7910b03aaf26bb0-ray-worker-3']\n",
-      "Scaling not yet done...\n",
-      "ray-68b5e1f3b7910b03aaf26bb0\n",
-      "http://ddl-cluster-scaler-svc.domino-field.svc.cluster.local/ddl_cluster_scaler/get/rayclusters/ray-68b5e1f3b7910b03aaf26bb0\n",
-      "Status code 200\n",
-      "Expected worker nodes 1\n",
-      "Current worker nodes ['ray-68b5e1f3b7910b03aaf26bb0-ray-worker-0']\n"
+      "Actual worker nodes 2\n",
+      "Expected worker nodes 2\n",
+      "Current worker nodes ['ray-68b8412c49d5771beb6aab8d-ray-worker-0', 'ray-68b8412c49d5771beb6aab8d-ray-worker-1']\n"
      ]
     },
     {
@@ -127,21 +145,21 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from utils import cluster_scaler_client\n",
-    "cluster_scaler_client.scale_cluster(cluster_kind=\"rayclusters\",replicas=1)\n",
-    "cluster_scaler_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
+    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=\"rayclusters\",worker_hw_tier_name=\"Small\", replicas=1)\n",
+    "json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False)\n",
+    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac1a8bb4-2fef-4058-a1e8-b00c77f65fa2",
+   "id": "5d94d772-41f4-4ca8-a4d6-2ecf7d5c54bc",
    "metadata": {},
    "outputs": [],
    "source": []
