Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/basic_mlflow_client.ipynb
+++ b/basic_mlflow_client.ipynb
@@ -191,7 +191,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyfunc_model = load_xgb_pyfunc_version(exp_model_name, \"latest\")\n"
+    "pyfunc_model = load_xgb_pyfunc_version(exp_model_name, \"latest\")\n",
+    "sample = np.random.rand(1, 30)  # shape must match your training columns\n",
+    "preds = predict_with_pyfunc(pyfunc_model, sample)\n",
+    "print(\"PyFunc preds:\", preds)"
    ]
   },
   {
@@ -200,11 +203,7 @@
    "id": "47cc2538-642d-4d1e-b521-d3fd3d2d5d48",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "sample = np.random.rand(1, 30)  # shape must match your training columns\n",
-    "preds = predict_with_pyfunc(pyfunc_model, sample)\n",
-    "print(\"PyFunc preds:\", preds)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
