--- a/execute_domino_job.ipynb
+++ b/execute_domino_job.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from domino import Domino\n",
     "def get_hw_tier_id(name: str):\n",
     "    api_proxy = os.environ['DOMINO_API_PROXY']\n",
     "    url = f\"{api_proxy}/v4/hardwareTier\"\n",
@@ -25,16 +26,7 @@
     "    hw_tiers = results.json()['hardwareTiers']\n",
     "    for h in hw_tiers:\n",
     "        if h['name']==name:\n",
-    "            return h\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ae8ebf7-d285-489a-8ea8-e086baf4a611",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            return h\n",
     "\n",
     "def get_environment_id(name: str):\n",
     "    api_proxy = os.environ['DOMINO_API_PROXY']\n",
@@ -44,16 +36,6 @@
     "    for e in envs:\n",
     "        if e['name']==name:\n",
     "            return e\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ad86b3b-1cdb-4008-99bc-8977bc7ab645",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from domino import Domino"
    ]
   },
   {
