--- a/service_accounts/service_accounts_mgmt.ipynb
+++ b/service_accounts/service_accounts_mgmt.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "7de67838-edce-4536-98f1-16c8bb4a1992",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:8899/v4/serviceAccounts\n",
-      "<Response [200]>\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import requests\n",
@@ -31,12 +21,40 @@
    "id": "8f2114ec-4eed-4d4a-8cb9-d33b05b7547f",
    "metadata": {},
    "source": [
-    "## Fetch all service accounts"
+    "## Why Service Account?\n",
+    "\n",
+    "Service Accounts are industry standard ways of creating identities which only interact with the platform programmatically. They are identities used to execute automation workflows.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68304f76-9d7b-4aa0-9e32-c6002d79c0cc",
+   "metadata": {},
+   "source": [
+    "## What functions does this notebook expose?\n",
+    "\n",
+    "1. List all service accounts - `get_all_service_accounts`\n",
+    "2. Create a new service account - `create_sa(sa_name)`\n",
+    "3. Get the Keycloak Id associated with each SA - `get_idp_id_by_sa()`\n",
+    "4. Get the Domino (Mongo) Id associated with each SA - `get_id_by_sa()`\n",
+    "5. Create a named token for a service account. A service account can have many named tokens -`create_token(idpid,token_name)`\n",
+    "6. Invalidate token for a service account. A token that is invalidated cannot be reactivated - `invalidate_token(token_name):`\n",
+    "7. Delete token for a service account. A token with the same name can be recreated after its deleted - `delete_token(token_name)`\n",
+    "8. Add a service account as a project collaborator (collab_id==sa_mongo_id) - `add_sa_as_project_collaborator(project_id,collab_id,project_role)`\n",
+    "9. Get git credential id's associated with all users (id==mongo_id)- `get_git_credentials(id)`\n",
+    "10. Get repo_id associated with a git backed project - `get_project_repo_id(project_id)`\n",
+    "11. Get git credentials associated with a give project - `get_git_credentials`\n",
+    "12. Add a git credential for a collaborating project for a given sa `add_git_cred_for_project_for_sa`\n",
+    "13. Delete git credentials for a collaborating project for a given sa `delete_git_credentials_for_sa`\n",
+    "\n",
+    "(11,12,13) in the real world would be run by a SA token after the SA is added as a collaborator for a give project\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "cbc3ceb0-b430-41a1-99cf-5eee2d3ce001",
    "metadata": {},
    "outputs": [],
@@ -55,20 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "4ba9acc6-57ea-4a6e-b25b-041d42cb43ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://localhost:8899/v4/serviceAccounts\n",
-      "<Response [200]>\n",
-      "['svc-user-ds-u1', 'svc-admin-u2']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(get_all_service_accounts())"
    ]
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "6ea7ebe1-1d8e-45b5-b02a-1456b6d01819",
    "metadata": {},
    "outputs": [],
@@ -100,21 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "92e94a22-5565-4282-933b-3208016d8451",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Response for creating svc account svc-user-ds-u1 is 500\n",
-      "{'message': 'A user with the username svc-user-ds-u1 already exists.', 'success': False}\n",
-      "Response for creating svc account svc-admin-u2 is 500\n",
-      "{'message': 'A user with the username svc-admin-u2 already exists.', 'success': False}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "svc_accounts=['svc-user-ds-u1','svc-admin-u2']\n",
     "for sa_name in svc_accounts:\n",
@@ -124,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "48f68aa8-8d8e-42e0-8819-c0b6965e38ba",
    "metadata": {},
    "outputs": [],
@@ -152,25 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "e980a0a2-c950-4f34-94bd-506a68b64208",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'username': 'svc-user-ds-u1', 'email': 'svc-user-ds-u1@xyz.com', 'id': '68b9af2aef0f2d1f1e95fdc4', 'idpId': '99d06216-d4bd-444f-9b03-1ed57c28e8ab'}, {'username': 'svc-admin-u2', 'email': 'svc-admin-u2@xyz.com', 'id': '68b9af2b63f3790aeb9ba4b8', 'idpId': '2679d9fa-2efc-4787-a9a5-8800a885de13'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "idp_by_user = get_idp_id_by_sa()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "3dd350aa-4378-4289-ae94-878750a2c8b1",
    "metadata": {},
    "outputs": [],
@@ -186,19 +175,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "50117bcf-4f51-4410-be6a-34b231492246",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "201\n",
-      "201\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = []\n",
     "for user, idpid in idp_by_user.items():    \n",
@@ -242,35 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "747779e5-9219-4032-896e-c763ffa3d7fc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "    {\n",
-      "        \"name\": \"svc-user-ds-u1-token-app\",\n",
-      "        \"serviceAccountIdpId\": \"99d06216-d4bd-444f-9b03-1ed57c28e8ab\",\n",
-      "        \"isValid\": false,\n",
-      "        \"createdAt\": \"2025-09-04T15:35:40.243Z\",\n",
-      "        \"expiresAt\": \"2026-01-02T15:35:40.233Z\"\n",
-      "    }\n",
-      "]\n",
-      "[\n",
-      "    {\n",
-      "        \"name\": \"svc-admin-u2-token-app\",\n",
-      "        \"serviceAccountIdpId\": \"2679d9fa-2efc-4787-a9a5-8800a885de13\",\n",
-      "        \"isValid\": false,\n",
-      "        \"createdAt\": \"2025-09-04T15:35:40.637Z\",\n",
-      "        \"expiresAt\": \"2026-01-02T15:35:40.625Z\"\n",
-      "    }\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#List all tokens\n",
     "def list_all_tokens(idpid):\n",
@@ -287,35 +242,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "97448c8d-5475-4002-afa9-742f5f8ac685",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "    {\n",
-      "        \"name\": \"svc-user-ds-u1-token-app\",\n",
-      "        \"serviceAccountIdpId\": \"99d06216-d4bd-444f-9b03-1ed57c28e8ab\",\n",
-      "        \"isValid\": false,\n",
-      "        \"createdAt\": \"2025-09-04T15:35:40.243Z\",\n",
-      "        \"expiresAt\": \"2026-01-02T15:35:40.233Z\"\n",
-      "    }\n",
-      "]\n",
-      "[\n",
-      "    {\n",
-      "        \"name\": \"svc-admin-u2-token-app\",\n",
-      "        \"serviceAccountIdpId\": \"2679d9fa-2efc-4787-a9a5-8800a885de13\",\n",
-      "        \"isValid\": false,\n",
-      "        \"createdAt\": \"2025-09-04T15:35:40.637Z\",\n",
-      "        \"expiresAt\": \"2026-01-02T15:35:40.625Z\"\n",
-      "    }\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for user, idpid in idp_by_user.items():\n",
     "    list_all_tokens(idpid)"
@@ -323,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "82a2d0a9-6594-4981-b983-4af3e895fd1e",
    "metadata": {},
    "outputs": [],
@@ -343,25 +273,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "deae52fd-1621-43b3-9e44-6304ece5691f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Invalidating token svc-user-ds-u1-token-app?\n",
-      "200\n",
-      "Invalidating token svc-admin-u2-token-app?\n",
-      "200\n",
-      "Deleting token svc-user-ds-u1-token-app?\n",
-      "200\n",
-      "Deleting token svc-admin-u2-token-app?\n",
-      "200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for user, idpid in idp_by_user.items():    \n",
     "    token_name = f\"{user}-token-app\"\n",
@@ -376,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "bfeda917-114a-4ce7-ab5d-8f5d63884413",
    "metadata": {},
    "outputs": [],
@@ -394,22 +309,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "id": "1c2c218d-2836-4844-ac33-c814d5440eca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'username': 'svc-user-ds-u1', 'email': 'svc-user-ds-u1@xyz.com', 'id': '68b9af2aef0f2d1f1e95fdc4', 'idpId': '99d06216-d4bd-444f-9b03-1ed57c28e8ab'}, {'username': 'svc-admin-u2', 'email': 'svc-admin-u2@xyz.com', 'id': '68b9af2b63f3790aeb9ba4b8', 'idpId': '2679d9fa-2efc-4787-a9a5-8800a885de13'}]\n",
-      "200\n",
-      "{'collaboratorId': '68b9af2aef0f2d1f1e95fdc4', 'projectRole': 'Contributor'}\n",
-      "200\n",
-      "{'collaboratorId': '68b9af2b63f3790aeb9ba4b8', 'projectRole': 'Contributor'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "project_id = os.environ['DOMINO_PROJECT_ID']\n",
     "id_by_user = get_id_by_sa()\n",
@@ -429,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "2fbbf3ec-84c6-4dd6-b0ba-4f681d121271",
    "metadata": {},
    "outputs": [],
@@ -443,14 +346,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "id": "93f8f958-09e8-4cc1-8262-a20851ad2245",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_git_credentials_to_sa(id,token):\n",
+    "def add_git_credentials_to_sa(id,git_token_name,git_token):\n",
     "    url = f\"{api_proxy}/v4/accounts/{id}/gitcredentials\"\n",
-    "    p = {\"name\":\"test\",\"gitServiceProvider\":\"github\",\"accessType\":\"token\",\"token\":token,\"type\":\"TokenGitCredentialDto\"}\n",
+    "    p = {\"name\":git_token_name,\"gitServiceProvider\":\"github\",\"accessType\":\"token\", \"token\":git_token,\"type\":\"TokenGitCredentialDto\"}\n",
     "    resp = requests.post(url,json=p,headers={'Content-Type':'application/json'})   \n",
     "    print(resp.status_code)\n",
     "    return resp.json()\n"
@@ -458,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "id": "29e2247d-6180-455c-94ed-fc214590049e",
    "metadata": {},
    "outputs": [],
@@ -472,41 +375,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "id": "d33ca38f-1291-4dbe-80b5-7cffa202bee6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'username': 'svc-user-ds-u1', 'email': 'svc-user-ds-u1@xyz.com', 'id': '68b9af2aef0f2d1f1e95fdc4', 'idpId': '99d06216-d4bd-444f-9b03-1ed57c28e8ab'}, {'username': 'svc-admin-u2', 'email': 'svc-admin-u2@xyz.com', 'id': '68b9af2b63f3790aeb9ba4b8', 'idpId': '2679d9fa-2efc-4787-a9a5-8800a885de13'}]\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "{'id': '68b9be4c63f3790aeb9ba4db', 'name': 'test', 'gitServiceProvider': 'github', 'domain': 'github.com', 'fingerprint': '7b:3c:af:44:d3:37:ca:e1:74:54:0c:4d:26:e2:2b:27', 'protocol': 'https'}\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "{'id': '68b9be4c63f3790aeb9ba4dc', 'name': 'test', 'gitServiceProvider': 'github', 'domain': 'github.com', 'fingerprint': '7b:3c:af:44:d3:37:ca:e1:74:54:0c:4d:26:e2:2b:27', 'protocol': 'https'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "project_id = os.environ['DOMINO_PROJECT_ID']\n",
     "id_by_user = get_id_by_sa()\n",
     "fake_token = \"xxx\"\n",
+    "token_name = \"fake-name\"\n",
     "for u,id in id_by_user.items():\n",
+    "    \n",
     "    creds = get_git_credentials(id)\n",
     "    for c in creds:\n",
     "        credential_id = c['id']\n",
     "        delete_git_credentials_for_sa(id,credential_id)\n",
-    "        print(add_git_credentials_to_sa(id,fake_token))"
+    "        print(add_git_credentials_to_sa(id,token_name,fake_token))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "52171037-ea25-48fe-bcb8-bc41e259a273",
    "metadata": {},
    "outputs": [],
@@ -516,6 +405,7 @@
     "    git_repository_id = requests.get(url).json()['mainRepository']['id']\n",
     "    return git_repository_id\n",
     "\n",
+    "##Run this using the service account token. This is for illustration only\n",
     "def add_git_cred_for_project_for_sa(project_id,repo_id,cred_id):\n",
     "    url = f\"{api_proxy}/v4/projects/{project_id}/repository/{repo_id}/credentialMapping\"\n",
     "    out = requests.put(url,json={\"credentialId\": cred_id})\n",
@@ -538,19 +428,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "0ec53fd8-9cf7-4adc-b73c-2c8001f57d89",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'username': 'svc-user-ds-u1', 'email': 'svc-user-ds-u1@xyz.com', 'id': '68b9af2aef0f2d1f1e95fdc4', 'idpId': '99d06216-d4bd-444f-9b03-1ed57c28e8ab'}, {'username': 'svc-admin-u2', 'email': 'svc-admin-u2@xyz.com', 'id': '68b9af2b63f3790aeb9ba4b8', 'idpId': '2679d9fa-2efc-4787-a9a5-8800a885de13'}]\n",
-      "Repo id 68b08bc0dc77613e66e6364f\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "project_id = os.environ['DOMINO_PROJECT_ID']\n",
@@ -561,40 +442,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "id": "9a457fff-29bd-4922-8cea-6a1b930f08f4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "Get Git Cred mapping\n",
-      "200\n",
-      "\"68b9be4c63f3790aeb9ba4dc\"\n",
-      "None\n",
-      "Delete Git Cred mapping\n",
-      "200\n",
-      "{\"userId\":\"68ac9b59ea374e2b81c48d75\",\"projectId\":\"68b08bbfdc77613e66e6364e\",\"repoId\":\"68b08bc0dc77613e66e6364f\",\"credentialId\":\"68b9be4c63f3790aeb9ba4dc\"}\n",
-      "Add Git Cred mapping\n",
-      "200\n",
-      "{\"userId\":\"68ac9b59ea374e2b81c48d75\",\"projectId\":\"68b08bbfdc77613e66e6364e\",\"repoId\":\"68b08bc0dc77613e66e6364f\",\"credentialId\":\"68b9be4c63f3790aeb9ba4db\"}\n",
-      "200\n",
-      "Get Git Cred mapping\n",
-      "200\n",
-      "\"68b9be4c63f3790aeb9ba4db\"\n",
-      "None\n",
-      "Delete Git Cred mapping\n",
-      "200\n",
-      "{\"userId\":\"68ac9b59ea374e2b81c48d75\",\"projectId\":\"68b08bbfdc77613e66e6364e\",\"repoId\":\"68b08bc0dc77613e66e6364f\",\"credentialId\":\"68b9be4c63f3790aeb9ba4db\"}\n",
-      "Add Git Cred mapping\n",
-      "200\n",
-      "{\"userId\":\"68ac9b59ea374e2b81c48d75\",\"projectId\":\"68b08bbfdc77613e66e6364e\",\"repoId\":\"68b08bc0dc77613e66e6364f\",\"credentialId\":\"68b9be4c63f3790aeb9ba4dc\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "##This should be run using each service account tokens \n",
     "for u,id in id_by_user.items():\n",
     "    creds = get_git_credentials(id)\n",
     "    credential_id = creds[0]['id']\n",
