Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/notebooks/basic_mlflow_client.ipynb
+++ b/notebooks/basic_mlflow_client.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7ba3c085-eb7f-47ff-8d75-23b033069f43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/mnt/code\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c0e4d09f-86a9-4224-91c4-79daef5cfe4c",
    "metadata": {},
    "outputs": [],
