--- a/notebooks/execute_domino_job.ipynb
+++ b/notebooks/execute_domino_job.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e8cdf3b7-0caf-498b-a383-6432e6b0c932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/mnt/code\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9643d8fd-750a-4a82-8728-c2bd241bb0f5",
    "metadata": {},
    "outputs": [],
