--- a/notebooks/basic_ray_job.ipynb
+++ b/notebooks/basic_ray_job.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/mnt/code\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "1336f048-16eb-441b-9c12-74309c613578",
    "metadata": {},
@@ -39,14 +50,6 @@
     "from utils import mlflow_utils\n",
     "from utils import ray_utils"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
