--- a/notebooks/cluster_scaler_client.ipynb
+++ b/notebooks/cluster_scaler_client.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aa0b7739-6f23-45cf-abe5-81a8c7d6658c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/mnt/code\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b50fcc65-7e3d-458f-a01c-0135b21ac2cb",
    "metadata": {},
    "outputs": [],
