Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/notebooks/basic_spark_job.ipynb
+++ b/notebooks/basic_spark_job.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "321dad88-ff5c-478d-b5bc-db819d934859",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"/mnt/code\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e44efccb-519c-4125-96b3-4bcc95d0f52b",
    "metadata": {},
    "outputs": [],
