Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/notebooks/basic_ray_job.ipynb
+++ b/notebooks/basic_ray_job.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a0a54bc1-58ed-42ae-ae0c-341a0ca2d442",
    "metadata": {},
    "outputs": [],
@@ -362,30 +362,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daaca126-a443-402f-8b44-1c5f9a3f2447",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "043ca34d-56b3-42b4-9ced-c185bb3a7ea1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dcb46094-7068-418f-817e-95d7d3053c30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "41ee926e-ca00-486d-af2c-53cd603c4b3d",
    "metadata": {},
    "outputs": [],
@@ -430,7 +406,7 @@
     "from omegaconf import OmegaConf\n",
     "import os\n",
     "# Point Hydra to your conf/ directory\n",
-    "with initialize(config_path=\"conf\"):\n",
+    "with initialize(config_path=\"../conf\"):\n",
     "    cfg = compose(config_name=\"config\", overrides=[\"env=dev\"])\n",
     "    #print(f\"Running in {cfg.env} environment\")\n",
     "    #print(OmegaConf.to_yaml(cfg, resolve=True))\n",
