--- a/notebooks/basic_spark_job.ipynb
+++ b/notebooks/basic_spark_job.ipynb
@@ -268,8 +268,8 @@
     "    spark.stop()\n",
     "\n",
     "# Example:\n",
-    "# main(\"s3://ddl-wadkars/navy/sample-input/test.txt\",\n",
-    "#      \"s3://ddl-wadkars/navy/sample-output/\", make_synth=True, synth_lines=1000)\n"
+    "# main(\"s3://<BUCKET_NAME>/end-to-end/sample-input/test.txt\",\n",
+    "#      \"s3://<BUCKET_NAME>/end-to-end/sample-output/\", make_synth=True, synth_lines=1000)\n"
    ]
   },
   {
@@ -279,8 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_input_text=\"s3://ddl-wadkars/navy/sample-input/test.txt\"\n",
-    "s3_output_parquet=\"s3://ddl-wadkars/navy/sample-output/\"\n",
+    "s3_bucket = os.environ['S3_BUCKET_NAME']\n",
+    "s3_input_text=f\"s3://{s3_bucket}/end-to-end/sample-input/test.txt\"\n",
+    "s3_output_parquet=f\"s3://{s3_bucket}/end-to-end/sample-output/\"\n",
     "#Delete if it exists. Not necessary because we use overwrite mode\n",
     "#delete_if_exists(s3_input_text)\n",
     "#delete_if_exists(s3_output_parquet)"
