--- a/notebooks/cluster_scaler_client.ipynb
+++ b/notebooks/cluster_scaler_client.ipynb
@@ -34,21 +34,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80565abf-db18-457c-af82-d2a2d2434fdc",
+   "metadata": {},
+   "source": [
+    "## Define Cluster Kind\n",
+    "\n",
+    "For ray clusters use this section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25616bb9-fd3a-43da-86bf-bdafca9a24bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cluster_kind = \"rayclusters\"\n",
+    "#cluster_kind = \"sparkclusters\"\n",
+    "cluster_kind = \"daskclusters\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdacf0a1-7525-4aa8-a2d7-7bd2f3231aaa",
+   "metadata": {},
+   "source": [
+    "### Get the cluster status"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "626dc69d-bf2c-40bf-bf80-0ce17a5ab6dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = ddl_cluster_scaling_client.get_cluster_status()['status']\n",
+    "j = ddl_cluster_scaling_client.get_cluster_status(cluster_kind=cluster_kind)\n",
     "print('Cluster status')\n",
-    "print(json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False))\n",
-    "j = ddl_cluster_scaling_client.get_cluster_status()['spec']['autoscaling']\n",
+    "print(json.dumps(j['status'], indent=2, sort_keys=True, ensure_ascii=False))\n",
+    "\n",
     "print('Cluster Autoscaling status')\n",
-    "print(json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False))\n",
-    "j = ddl_cluster_scaling_client.get_cluster_status()['spec']['worker']['replicas']\n",
+    "print(json.dumps(j['spec']['autoscaling'], indent=2, sort_keys=True, ensure_ascii=False))\n",
+    "\n",
     "print('Cluster worker replicas')\n",
-    "print(j)"
+    "print(j['spec']['worker']['replicas'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "370f109c-b5f0-43f8-8552-afdde12d86fc",
+   "metadata": {},
+   "source": [
+    "### Scale the cluster up using HW tier of your choice\n",
+    "\n",
+    "Now scale up the cluster. You need to provide two parameters:\n",
+    "1. `head_hw_tier_name` - This is optional. You use it to override the HW Tier used to start the cluster for the head node\n",
+    "2. `worker_hw_tier_name` - This is optional. You use it to override the HW Tier used to start the cluster for the workers\n",
+    "3. `replicas` - This is the number of desired workers. It needs to be less than the `max_workers` for this cluster or it is capped to the \n",
+    "`max_workers`"
    ]
   },
   {
@@ -58,9 +102,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=\"rayclusters\",worker_hw_tier_name=\"Medium\", replicas=3)\n",
+    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=cluster_kind,head_hw_tier_name=\"Medium\", worker_hw_tier_name=\"Medium\", replicas=3)\n",
     "json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False)\n",
-    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
+    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a19142c-1468-46d2-80b7-8ba64aca316b",
+   "metadata": {},
+   "source": [
+    "### Optionally restart the head node\n",
+    "\n",
+    "With certain clusters (Ray) the api based scaling does not cause the head node UI to correctly reflect the number of workers even though\n",
+    "the cluster utilizes all the workers. It is safe to restart the head code as a matter of hygiene. Once restarted it correctly\n",
+    "reflect the correct number of workers."
    ]
   },
   {
@@ -70,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = ddl_cluster_scaling_client.restart_head_node(cluster_kind=\"rayclusters\")\n",
+    "j = ddl_cluster_scaling_client.restart_head_node(cluster_kind=cluster_kind)\n",
     "restarts_at = j['started_at']\n",
     "print(restarts_at)"
    ]
@@ -82,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddl_cluster_scaling_client.restart_head_node_status(cluster_kind=\"rayclusters\",restarted_since=restarts_at)"
+    "ddl_cluster_scaling_client.restart_head_node_status(cluster_kind=cluster_kind,restarted_since=restarts_at)"
    ]
   },
   {
@@ -92,7 +148,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddl_cluster_scaling_client.wait_until_node_restarted(cluster_kind=\"rayclusters\",restarted_since=restarts_at)"
+    "ddl_cluster_scaling_client.wait_until_node_restarted(cluster_kind=cluster_kind,restarted_since=restarts_at)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0160b451-bbba-4d3c-8ce1-9e616d2a7566",
+   "metadata": {},
+   "source": [
+    "### Use the cluster\n",
+    "\n",
+    "Having fully scaled the cluster to your requirements, use your cluster. Run your hyper-parameter tuning, Deepspeed based LLM\n",
+    "fine tuning, large Spark queries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2df4ca74-ae2b-48e8-a1ca-2b39cf4d8aaf",
+   "metadata": {},
+   "source": [
+    "### Scale Down Cluster\n",
+    "\n",
+    "Having finished your work, scale down the cluster. You need to provide two parameters:\n",
+    "1. `worker_hw_tier_name` - This is optional. You use it to override the HW Tier used to scale the cluster. It is recommended. Use the smallest hw_tier permitted for this cluster type. Domino does not allow you to scale down your cluster to 0. This capability is provided so that if you have used an expensive HW tier for your worker nodes (Ex. GPU Tiers), when you scale down the cluster to 1 worker you can avoid paying for the expensive tier.\n",
+    " \n",
+    "2. `replicas` - This is the number of desired workers. It needs to be more than or equal to the `min_workers` for this cluster \n",
+    "or it is capped to `min_workers`. Always start your cluster so that minimum workers is 1."
    ]
   },
   {
@@ -102,10 +183,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=\"rayclusters\",worker_hw_tier_name=\"Small\", replicas=1)\n",
+    "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=cluster_kind,head_hw_tier_name=\"Small\",worker_hw_tier_name=\"Small\", replicas=1)\n",
     "json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False)\n",
-    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=\"rayclusters\")"
+    "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "496f8f9c-072d-4d8e-a165-b3521ebaf2bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ddl_cluster_scaling_client.wait_until_node_restarted(cluster_kind=cluster_kind,restarted_since=restarts_at)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d2f1120-6eab-49a7-9970-1c934aa7ed3b",
+   "metadata": {},
+   "source": [
+    "### Optionally restart the head node again\n",
+    "\n",
+    "This is a good practice in general"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56bc92b-5b73-4609-ac43-c08c805e2535",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -113,15 +223,12 @@
    "id": "5d94d772-41f4-4ca8-a4d6-2ecf7d5c54bc",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ddl_cluster_scaling_client.restart_head_node_status(cluster_kind=\"rayclusters\",restarted_since=restarts_at)\n",
-    "ddl_cluster_scaling_client.wait_until_node_restarted(cluster_kind=\"rayclusters\",restarted_since=restarts_at)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "917f43c3-b773-4295-94ac-3d6bb9447de2",
+   "id": "eca9b144-a913-491c-a7fb-224a06d350c1",
    "metadata": {},
    "outputs": [],
    "source": []
