Pushed from Domino: https://marcdo77364.cs.domino.tech/workspace/wadkars/ddl-end-to-end-demo?executionId=68b08c14dc77613e66e63655

--- a/notebooks/cluster_scaler_client.ipynb
+++ b/notebooks/cluster_scaler_client.ipynb
@@ -102,6 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#worker_hw_tier_name=GPU (small) \n",
     "j = ddl_cluster_scaling_client.scale_cluster(cluster_kind=cluster_kind,head_hw_tier_name=\"Medium\", worker_hw_tier_name=\"Medium\", replicas=3)\n",
     "json.dumps(j, indent=2, sort_keys=True, ensure_ascii=False)\n",
     "ddl_cluster_scaling_client.wait_until_scaling_complete(cluster_kind=cluster_kind)"
